--- a/index.html
+++ b/index.html
@@ -26,26 +26,34 @@
         <a class="logo" href="./index.html"
           >Web<span class="logo-studio">Studio</span></a
         >
-        <ul class="nav-header">
+        <ul>
           <li>
-            <a href="#"><span class="nav-header-studio">Studio</span></a>
+            <a href="./index.html" class="nav-header"
+              ><span class="nav-header-studio">Studio</span></a
+            >
           </li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="" class="nav-header">Portfolio</a></li>
+          <li><a href="" class="nav-header">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-address">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-address">
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com" class="address"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <!-- MAIN -->
     <main>
       <!-- Section-1 -->
-      <section class="section-1">
-        <h1 class="h1">Effective Solutions for Your Business</h1>
+      <section class="section-one">
+        <h1 class="h-one">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
       <!-- Section-2 -->
@@ -53,32 +61,32 @@
         <!-- <h2>Hiden</h2> -->
         <ul>
           <li>
-            <h3 class="section-2-h3">Strategy</h3>
-            <p class="section-2-p">
+            <h3 class="section-two-h-three">Strategy</h3>
+            <p class="section-two-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3 class="section-2-h3">Punctuality</h3>
-            <p class="section-2-p">
+            <h3 class="section-two-h-three">Punctuality</h3>
+            <p class="section-two-p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="section-2-h3">Diligence</h3>
-            <p class="section-2-p">
+            <h3 class="section-two-h-three">Diligence</h3>
+            <p class="section-two-p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="section-2-h3">Technologies</h3>
-            <p class="section-2-p">
+            <h3 class="section-two-h-three">Technologies</h3>
+            <p class="section-two-p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -86,103 +94,103 @@
         </ul>
       </section>
       <!-- Section 3 -->
-      <section class="section-3">
-        <h2 class="section-3-h2">Our Team</h2>
+      <section class="section-three">
+        <h2 class="section-three-h-two">Our Team</h2>
         <ul>
           <!-- Team Card 1/4 -->
-          <li class="section-3-li">
+          <li class="section-three-li">
             <img src="./images/img.jpg" alt="man" width="264" height="260" />
-            <h3 class="section-3-h3">Mark Guerrero</h3>
-            <p class="section-3-p">Product Designer</p>
+            <h3 class="section-three-h-three">Mark Guerrero</h3>
+            <p class="section-three-p">Product Designer</p>
           </li>
           <!-- Team Card 2/4 -->
-          <li class="section-3-li">
+          <li class="section-three-li">
             <img src="./images/img2.jpg" alt="man" width="264" height="260" />
-            <h3 class="section-3-h3">Tom Ford</h3>
-            <p class="section-3-p">Frontend Developer</p>
+            <h3 class="section-three-h-three">Tom Ford</h3>
+            <p class="section-three-p">Frontend Developer</p>
           </li>
           <!-- Team Card 3/4 -->
-          <li class="section-3-li">
+          <li class="section-three-li">
             <img src="./images/img3.jpg" alt="women" width="264" height="260" />
-            <h3 class="section-3-h3">Camila Garcia</h3>
-            <p class="section-3-p">Marketing</p>
+            <h3 class="section-three-h-three">Camila Garcia</h3>
+            <p class="section-three-p">Marketing</p>
           </li>
           <!-- Team Card 4/4 -->
-          <li class="section-3-li">
+          <li class="section-three-li">
             <img src="./images/img4.jpg" alt="man" width="264" height="260" />
-            <h3 class="section-3-h3">Daniel Wilson</h3>
-            <p class="section-3-p">UI Designer</p>
+            <h3 class="section-three-h-three">Daniel Wilson</h3>
+            <p class="section-three-p">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- Section-4 -->
       <section>
-        <h2 class="section-4-h2">Our Portfolio</h2>
+        <h2 class="section-four-h-two">Our Portfolio</h2>
         <ul>
-          <li class="section-4-li">
+          <li class="section-four-li">
             <img
               src="./images/img-1.jpg"
               alt="BankApp"
               width="360"
               height="300"
             />
-            <h3 class="section-4-h3">Banking App</h3>
-            <p class="section-4-p">App</p>
+            <h3 class="section-four-h-three">Banking App</h3>
+            <p class="section-four-p">App</p>
           </li>
 
-          <li class="section-4-li">
+          <li class="section-four-li">
             <img
               src="./images/img-2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
-            <h3 class="section-4-h3">Cashless Payment</h3>
-            <p class="section-4-p">Marketing</p>
+            <h3 class="section-four-h-three">Cashless Payment</h3>
+            <p class="section-four-p">Marketing</p>
           </li>
 
-          <li class="section-4-li">
+          <li class="section-four-li">
             <img
               src="./images/img-3.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
-            <h3 class="section-4-h3">Meditation App</h3>
-            <p class="section-4-p">App</p>
+            <h3 class="section-four-h-three">Meditation App</h3>
+            <p class="section-four-p">App</p>
           </li>
 
-          <li class="section-4-li">
+          <li class="section-four-li">
             <img
               src="./images/img-4.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
-            <h3 class="section-4-h3">Taxi Service</h3>
-            <p class="section-4-p">Marketing</p>
+            <h3 class="section-four-h-three">Taxi Service</h3>
+            <p class="section-four-p">Marketing</p>
           </li>
 
-          <li class="section-4-li">
+          <li class="section-four-li">
             <img
               src="./images/img-5.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h3 class="section-4-h3">Screen Illustrations</h3>
-            <p class="section-4-p">Design</p>
+            <h3 class="section-four-h-three">Screen Illustrations</h3>
+            <p class="section-four-p">Design</p>
           </li>
 
-          <li class="section-4-li">
+          <li class="section-four-li">
             <img
               src="./images/img-6.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
-            <h3 class="section-4-h3">Online Courses</h3>
-            <p class="section-4-p">Marketing</p>
+            <h3 class="section-four-h-three">Online Courses</h3>
+            <p class="section-four-p">Marketing</p>
           </li>
         </ul>
       </section>
