--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         >
         <ul>
           <li>
-            <a href="./index.html" class="nav-header"
-              ><span class="nav-header-studio">Studio</span></a
+            <a href="./index.html" class="nav-header nav-header-studio"
+              >Studio</a
             >
           </li>
           <li><a href="" class="nav-header">Portfolio</a></li>
@@ -58,7 +58,7 @@
       </section>
       <!-- Section-2 -->
       <section>
-        <!-- <h2>Hiden</h2> -->
+        <h2>Hiden</h2>
         <ul>
           <li>
             <h3 class="section-two-h-three">Strategy</h3>
