--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
               >Studio</a
             >
           </li>
-          <li><a href="" class="nav-header">Portfolio</a></li>
-          <li><a href="" class="nav-header">Contacts</a></li>
+          <li><a href="" class="nav-header nav-header-studio">Portfolio</a></li>
+          <li><a href="" class="nav-header nav-header-studio">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
