--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <!-- HAIDER -->
@@ -58,7 +58,7 @@
       </section>
       <!-- Section-2 -->
       <section>
-        <h2>Hiden</h2>
+        <h2>Advantages</h2>
         <ul>
           <li>
             <h3 class="section-two-h-three">Strategy</h3>
