--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <!-- MAIN -->
     <main>
       <!-- Section-1 -->
-      <section class="section-one">
-        <h1 class="h-one">Effective Solutions for Your Business</h1>
+      <section class="section-background">
+        <h1 class="title-first">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
       <!-- Section-2 -->
@@ -61,32 +61,32 @@
         <h2>Advantages</h2>
         <ul>
           <li>
-            <h3 class="section-two-h-three">Strategy</h3>
-            <p class="section-two-p">
+            <h3 class="advantages-title-item">Strategy</h3>
+            <p class="advantages-paragraph-item">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3 class="section-two-h-three">Punctuality</h3>
-            <p class="section-two-p">
+            <h3 class="advantages-title-item">Punctuality</h3>
+            <p class="advantages-paragraph-item">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="section-two-h-three">Diligence</h3>
-            <p class="section-two-p">
+            <h3 class="advantages-title-item">Diligence</h3>
+            <p class="advantages-paragraph-item">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="section-two-h-three">Technologies</h3>
-            <p class="section-two-p">
+            <h3 class="advantages-title-item">Technologies</h3>
+            <p class="advantages-paragraph-item">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -94,103 +94,103 @@
         </ul>
       </section>
       <!-- Section 3 -->
-      <section class="section-three">
-        <h2 class="section-three-h-two">Our Team</h2>
+      <section class="background-our-team">
+        <h2 class="title-our-team">Our Team</h2>
         <ul>
           <!-- Team Card 1/4 -->
-          <li class="section-three-li">
+          <li class="our-team-items-list">
             <img src="./images/img.jpg" alt="man" width="264" height="260" />
-            <h3 class="section-three-h-three">Mark Guerrero</h3>
-            <p class="section-three-p">Product Designer</p>
+            <h3 class="our-team-title">Mark Guerrero</h3>
+            <p class="our-team-paragraph">Product Designer</p>
           </li>
           <!-- Team Card 2/4 -->
-          <li class="section-three-li">
+          <li class="our-team-items-list">
             <img src="./images/img2.jpg" alt="man" width="264" height="260" />
-            <h3 class="section-three-h-three">Tom Ford</h3>
-            <p class="section-three-p">Frontend Developer</p>
+            <h3 class="our-team-title">Tom Ford</h3>
+            <p class="our-team-paragraph">Frontend Developer</p>
           </li>
           <!-- Team Card 3/4 -->
-          <li class="section-three-li">
+          <li class="our-team-items-list">
             <img src="./images/img3.jpg" alt="women" width="264" height="260" />
-            <h3 class="section-three-h-three">Camila Garcia</h3>
-            <p class="section-three-p">Marketing</p>
+            <h3 class="our-team-title">Camila Garcia</h3>
+            <p class="our-team-paragraph">Marketing</p>
           </li>
           <!-- Team Card 4/4 -->
-          <li class="section-three-li">
+          <li class="our-team-items-list">
             <img src="./images/img4.jpg" alt="man" width="264" height="260" />
-            <h3 class="section-three-h-three">Daniel Wilson</h3>
-            <p class="section-three-p">UI Designer</p>
+            <h3 class="our-team-title">Daniel Wilson</h3>
+            <p class="our-team-paragraph">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- Section-4 -->
       <section>
-        <h2 class="section-four-h-two">Our Portfolio</h2>
+        <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
-          <li class="section-four-li">
+          <li class="portfolio-list">
             <img
               src="./images/img-1.jpg"
               alt="BankApp"
               width="360"
               height="300"
             />
-            <h3 class="section-four-h-three">Banking App</h3>
-            <p class="section-four-p">App</p>
+            <h3 class="portfolio-title-list-item">Banking App</h3>
+            <p class="portfolio-paragraph">App</p>
           </li>
 
-          <li class="section-four-li">
+          <li class="portfolio-list">
             <img
               src="./images/img-2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
-            <h3 class="section-four-h-three">Cashless Payment</h3>
-            <p class="section-four-p">Marketing</p>
+            <h3 class="portfolio-title-list-item">Cashless Payment</h3>
+            <p class="portfolio-paragraph">Marketing</p>
           </li>
 
-          <li class="section-four-li">
+          <li class="portfolio-list">
             <img
               src="./images/img-3.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
-            <h3 class="section-four-h-three">Meditation App</h3>
-            <p class="section-four-p">App</p>
+            <h3 class="portfolio-title-list-item">Meditation App</h3>
+            <p class="portfolio-paragraph">App</p>
           </li>
 
-          <li class="section-four-li">
+          <li class="portfolio-list">
             <img
               src="./images/img-4.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
-            <h3 class="section-four-h-three">Taxi Service</h3>
-            <p class="section-four-p">Marketing</p>
+            <h3 class="portfolio-title-list-item">Taxi Service</h3>
+            <p class="portfolio-paragraph">Marketing</p>
           </li>
 
-          <li class="section-four-li">
+          <li class="portfolio-list">
             <img
               src="./images/img-5.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h3 class="section-four-h-three">Screen Illustrations</h3>
-            <p class="section-four-p">Design</p>
+            <h3 class="portfolio-title-list-item">Screen Illustrations</h3>
+            <p class="portfolio-paragraph">Design</p>
           </li>
 
-          <li class="section-four-li">
+          <li class="portfolio-list">
             <img
               src="./images/img-6.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
-            <h3 class="section-four-h-three">Online Courses</h3>
-            <p class="section-four-p">Marketing</p>
+            <h3 class="portfolio-title-list-item">Online Courses</h3>
+            <p class="portfolio-paragraph">Marketing</p>
           </li>
         </ul>
       </section>
@@ -200,7 +200,7 @@
       <a class="logo-footer" href="./index.html"
         >Web<span class="logo-studio-footer">Studio</span></a
       >
-      <p class="footer-p">
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
