--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
     <header>
       <nav>
         <a class="logo" href="./index.html"
-          >Web<span class="logo-studio">Studio</span></a
+          >Web<span class="logo-span">Studio</span></a
         >
         <ul>
           <li>
-            <a href="./index.html" class="nav-header nav-header-studio"
-              >Studio</a
-            >
+            <a href="./index.html" class="nav-adress">Studio</a>
           </li>
-          <li><a href="" class="nav-header nav-header-studio">Portfolio</a></li>
-          <li><a href="" class="nav-header nav-header-studio">Contacts</a></li>
+          <li><a href="" class="nav-adress">Portfolio</a></li>
+          <li><a href="" class="nav-adress">Contacts</a></li>
         </ul>
       </nav>
-      <address class="header-address">
+      <address class="address">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address"
+            <a href="mailto:info@devstudio.com" class="list-address"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="list-address"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -52,7 +52,7 @@
     <!-- MAIN -->
     <main>
       <!-- Section-1 -->
-      <section class="section-background">
+      <section class="effective-solutions-background">
         <h1 class="title-first">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
       </section>
@@ -61,32 +61,32 @@
         <h2>Advantages</h2>
         <ul>
           <li>
-            <h3 class="advantages-title-item">Strategy</h3>
-            <p class="advantages-paragraph-item">
+            <h3 class="advantages-list-title">Strategy</h3>
+            <p class="advantages-list-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3 class="advantages-title-item">Punctuality</h3>
-            <p class="advantages-paragraph-item">
+            <h3 class="advantages-list-title">Punctuality</h3>
+            <p class="advantages-list-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="advantages-title-item">Diligence</h3>
-            <p class="advantages-paragraph-item">
+            <h3 class="advantages-list-title">Diligence</h3>
+            <p class="advantages-list-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="advantages-title-item">Technologies</h3>
-            <p class="advantages-paragraph-item">
+            <h3 class="advantages-list-title">Technologies</h3>
+            <p class="advantages-list-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -94,38 +94,38 @@
         </ul>
       </section>
       <!-- Section 3 -->
-      <section class="background-our-team">
-        <h2 class="title-our-team">Our Team</h2>
+      <section class="background-team">
+        <h2 class="team">Our Team</h2>
         <ul>
           <!-- Team Card 1/4 -->
-          <li class="our-team-items-list">
+          <li class="team-list">
             <img src="./images/img.jpg" alt="man" width="264" height="260" />
-            <h3 class="our-team-title">Mark Guerrero</h3>
-            <p class="our-team-paragraph">Product Designer</p>
+            <h3 class="team-list-title">Mark Guerrero</h3>
+            <p class="team-list-paragraph">Product Designer</p>
           </li>
           <!-- Team Card 2/4 -->
-          <li class="our-team-items-list">
+          <li class="team-list">
             <img src="./images/img2.jpg" alt="man" width="264" height="260" />
-            <h3 class="our-team-title">Tom Ford</h3>
-            <p class="our-team-paragraph">Frontend Developer</p>
+            <h3 class="team-list-title">Tom Ford</h3>
+            <p class="team-list-paragraph">Frontend Developer</p>
           </li>
           <!-- Team Card 3/4 -->
-          <li class="our-team-items-list">
+          <li class="team-list">
             <img src="./images/img3.jpg" alt="women" width="264" height="260" />
-            <h3 class="our-team-title">Camila Garcia</h3>
-            <p class="our-team-paragraph">Marketing</p>
+            <h3 class="team-list-title">Camila Garcia</h3>
+            <p class="team-list-paragraph">Marketing</p>
           </li>
           <!-- Team Card 4/4 -->
-          <li class="our-team-items-list">
+          <li class="team-list">
             <img src="./images/img4.jpg" alt="man" width="264" height="260" />
-            <h3 class="our-team-title">Daniel Wilson</h3>
-            <p class="our-team-paragraph">UI Designer</p>
+            <h3 class="team-list-title">Daniel Wilson</h3>
+            <p class="team-list-paragraph">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- Section-4 -->
       <section>
-        <h2 class="portfolio-title">Our Portfolio</h2>
+        <h2 class="portfolio">Our Portfolio</h2>
         <ul>
           <li class="portfolio-list">
             <img
@@ -134,8 +134,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-list-item">Banking App</h3>
-            <p class="portfolio-paragraph">App</p>
+            <h3 class="portfolio-list-title">Banking App</h3>
+            <p class="portfolio-list-paragraph">App</p>
           </li>
 
           <li class="portfolio-list">
@@ -145,8 +145,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-list-item">Cashless Payment</h3>
-            <p class="portfolio-paragraph">Marketing</p>
+            <h3 class="portfolio-list-title">Cashless Payment</h3>
+            <p class="portfolio-list-paragraph">Marketing</p>
           </li>
 
           <li class="portfolio-list">
@@ -156,8 +156,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-list-item">Meditation App</h3>
-            <p class="portfolio-paragraph">App</p>
+            <h3 class="portfolio-list-title">Meditation App</h3>
+            <p class="portfolio-list-paragraph">App</p>
           </li>
 
           <li class="portfolio-list">
@@ -167,8 +167,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-list-item">Taxi Service</h3>
-            <p class="portfolio-paragraph">Marketing</p>
+            <h3 class="portfolio-list-title">Taxi Service</h3>
+            <p class="portfolio-list-paragraph">Marketing</p>
           </li>
 
           <li class="portfolio-list">
@@ -178,8 +178,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-list-item">Screen Illustrations</h3>
-            <p class="portfolio-paragraph">Design</p>
+            <h3 class="portfolio-list-title">Screen Illustrations</h3>
+            <p class="portfolio-list-paragraph">Design</p>
           </li>
 
           <li class="portfolio-list">
@@ -189,8 +189,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-list-item">Online Courses</h3>
-            <p class="portfolio-paragraph">Marketing</p>
+            <h3 class="portfolio-list-title">Online Courses</h3>
+            <p class="portfolio-list-paragraph">Marketing</p>
           </li>
         </ul>
       </section>
@@ -198,7 +198,7 @@
     <!-- FOOTER -->
     <footer class="footer">
       <a class="logo-footer" href="./index.html"
-        >Web<span class="logo-studio-footer">Studio</span></a
+        >Web<span class="logo-span-footer">Studio</span></a
       >
       <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
